feat(meeting): ミーティングタイマーの基盤を追加
- ミーティング定数と型を追加（src/features/meeting/constants/meetingConstants.ts）
- ミーティング関連ストアを実装（useMeetingStore/useAgendaStore/useRunStore）
  - ミーティング作成・シード、アジェンダCRUD、タイマー制御、借用/延長/次へ処理、議事録追加など
- エクスポート用の軽量契約実装を追加（src/features/meeting/services/exportContracts.ts）
- 機能エントリをエクスポートする index を追加（src/features/meeting/index.ts）
- 最小限のデザイントークンを追加（src/theme/designSystem.ts）
- MVPタスク一覧を specs に追加（specs/001-meeting-timer-mvp/tasks.md）
- .gitignore の整備と .eslintignore の追加

これによりミーティングタイマーのMVP実装に必要な基盤と仕様が揃います。

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,14 @@
-node_modules
+node_modules/
+dist/
+build/
+coverage/
+.turbo/
+.vite/
+.parcel-cache/
+*.log
+*.tmp
+*.swp
+.DS_Store
+Thumbs.db
+.env*
+/.specify/tmp/
