--- a/.github/workflows/docs-link-check.yml
+++ b/.github/workflows/docs-link-check.yml
@@ -5,10 +5,12 @@ on:
     paths: 
       - 'docs/**'
       - 'README.md'
+      - '.github/scripts/**'
   pull_request:
     paths: 
       - 'docs/**'
       - 'README.md'
+      - '.github/scripts/**'
   schedule:
     - cron: '0 9 * * 1'  # 毎週月曜日9時
   workflow_dispatch:
@@ -28,6 +30,9 @@ jobs:
         
     - name: Install markdown-link-check
       run: npm install -g markdown-link-check
+
+    - name: Check UTF-8 encoding and mojibake
+      run: node .github/scripts/check-docs-encoding.cjs
       
     - name: Check links in README
       run: markdown-link-check README.md --config .github/markdown-link-check-config.json
