--- a/.github/workflows/docs-quality-check.yml
+++ b/.github/workflows/docs-quality-check.yml
@@ -2,75 +2,114 @@ name: Documentation Quality Check
 
 on:
   push:
-    paths: 
+    paths:
       - 'docs/**'
       - 'README.md'
+      - '.github/scripts/**'
+      - '.editorconfig'
+      - '.vscode/**'
   pull_request:
-    paths: 
+    paths:
       - 'docs/**'
       - 'README.md'
+      - '.github/scripts/**'
+      - '.editorconfig'
+      - '.vscode/**'
   workflow_dispatch:
 
 jobs:
   markdown-lint:
     runs-on: ubuntu-latest
-    
+
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
-      
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20'
-        
-    - name: Install markdownlint-cli2
-      run: npm install -g markdownlint-cli2
-      
-    - name: Run markdownlint
-      run: markdownlint-cli2 "**/*.md" "#node_modules"
-      
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Install markdownlint-cli2
+        run: npm install -g markdownlint-cli2
+
+      - name: Run markdownlint
+        run: markdownlint-cli2 "**/*.md" "#node_modules"
+
+  docs-integrity:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Install dependencies
+        run: |
+          npm ci
+          npm install -g markdown-link-check
+
+      - name: Check UTF-8 encoding and mojibake
+        run: node .github/scripts/check-docs-encoding.cjs
+
+      - name: Check links in README
+        run: markdown-link-check README.md --config .github/markdown-link-check-config.json
+
+      - name: Check links in docs
+        run: |
+          find docs -name "*.md" -exec markdown-link-check {} --config .github/markdown-link-check-config.json \;
+
+      - name: Check internal links
+        run: node .github/scripts/check-internal-links.cjs
+
+      - name: Check image references
+        run: node .github/scripts/check-images.cjs
+
   code-block-test:
     runs-on: ubuntu-latest
-    
+
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
-      
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20'
-        
-    - name: Install dependencies
-      run: npm ci
-      
-    - name: Extract and test code blocks
-      run: |
-        echo "Testing JavaScript/TypeScript code blocks..."
-        node .github/scripts/test-code-blocks.cjs
-        
-    - name: Test shell commands
-      run: |
-        echo "Validating shell command examples..."
-        node .github/scripts/test-shell-commands.cjs
-        
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Extract and test code blocks
+        run: |
+          echo "Testing JavaScript/TypeScript code blocks..."
+          node .github/scripts/test-code-blocks.cjs
+
+      - name: Test shell commands
+        run: |
+          echo "Validating shell command examples..."
+          node .github/scripts/test-shell-commands.cjs
+
   quality-report:
     runs-on: ubuntu-latest
-    needs: [markdown-lint, code-block-test]
+    needs: [markdown-lint, docs-integrity, code-block-test]
     if: always()
-    
+
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
-      
-    - name: Generate quality report
-      run: |
-        echo "Generating documentation quality report..."
-        node .github/scripts/generate-quality-report.cjs
-        
-    - name: Upload quality report
-      uses: actions/upload-artifact@v4
-      with:
-        name: documentation-quality-report
-        path: quality-report.md
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Generate quality report
+        run: |
+          echo "Generating documentation quality report..."
+          node .github/scripts/generate-quality-report.cjs
+
+      - name: Upload quality report
+        uses: actions/upload-artifact@v4
+        with:
+          name: documentation-quality-report
+          path: quality-report.md
