--- a/.github/workflows/docs-quality-gate.yml
+++ b/.github/workflows/docs-quality-gate.yml
@@ -7,6 +7,8 @@ on:
       - 'docs/**'
       - 'README.md'
       - '.markdownlint.json'
+      - '.editorconfig'
+      - '.vscode/**'
       - '.github/scripts/**'
   pull_request:
     branches: [ main, develop ]
@@ -14,6 +16,8 @@ on:
       - 'docs/**'
       - 'README.md'
       - '.markdownlint.json'
+      - '.editorconfig'
+      - '.vscode/**'
       - '.github/scripts/**'
   workflow_dispatch:
 
@@ -54,6 +58,19 @@ jobs:
           echo "result=success" >> $GITHUB_OUTPUT
         else
           echo "❌ Markdown linting failed"
+          echo "result=failure" >> $GITHUB_OUTPUT
+          exit 1
+        fi
+
+    - name: Check UTF-8 encoding and mojibake
+      id: docs-encoding
+      run: |
+        echo "Checking UTF-8 encoding and mojibake..."
+        if node .github/scripts/check-docs-encoding.cjs; then
+          echo "✅ Encoding check passed"
+          echo "result=success" >> $GITHUB_OUTPUT
+        else
+          echo "❌ Encoding check failed"
           echo "result=failure" >> $GITHUB_OUTPUT
           exit 1
         fi
@@ -186,6 +203,7 @@ jobs:
       run: |
         echo "📊 Documentation Quality Gate Summary:"
         echo "- Markdown Linting: ${{ steps.markdownlint.outputs.result }}"
+        echo "- UTF-8 Encoding: ${{ steps.docs-encoding.outputs.result }}"
         echo "- Internal Links: ${{ steps.internal-links.outputs.result }}"
         echo "- Image References: ${{ steps.image-check.outputs.result }}"
         echo "- Code Blocks: ${{ steps.code-blocks.outputs.result }}"
@@ -193,6 +211,7 @@ jobs:
         
         # Fail the workflow if any required check failed
         if [[ "${{ steps.markdownlint.outputs.result }}" == "failure" ]] || \
+           [[ "${{ steps.docs-encoding.outputs.result }}" == "failure" ]] || \
            [[ "${{ steps.internal-links.outputs.result }}" == "failure" ]] || \
            [[ "${{ steps.image-check.outputs.result }}" == "failure" ]] || \
            [[ "${{ steps.code-blocks.outputs.result }}" == "failure" ]] || \
