ci: unify docs workflow triggers with path-based filters

--- a/.github/workflows/spec-kit-check.yml
+++ b/.github/workflows/spec-kit-check.yml
@@ -1,7 +1,16 @@
 name: Spec Kit Check
 
 on:
+  push:
+    paths:
+      - 'docs/**'
+      - '.specify/**'
+      - '.github/workflows/spec-kit-check.yml'
   pull_request:
+    paths:
+      - 'docs/**'
+      - '.specify/**'
+      - '.github/workflows/spec-kit-check.yml'
   workflow_dispatch:
 
 jobs:
