--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "files.encoding": "utf8",
   "files.autoGuessEncoding": false,
+  "chat.mcp.autoStart": true,
   "editor.formatOnSave": true,
   "editor.codeActionsOnSave": {
     "source.fixAll.markdownlint": "explicit"
