--- a/package.json
+++ b/package.json
@@ -26,8 +26,13 @@
   ],
   "author": "",
   "license": "MIT",
+  "overrides": {
+    "glob": "^11.0.3",
+    "minimatch": "^10.2.1",
+    "quill": "2.0.2"
+  },
   "engines": {
-    "node": ">=20.19.0 <21 || >=22.12.0 <23"
+    "node": ">=20.19.0 <21 || >=22.11.0 <23"
   },
   "dependencies": {
     "@langchain/anthropic": "^1.3.18",
@@ -59,19 +64,19 @@
     "@types/node": "^20.11.0",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
-    "@typescript-eslint/eslint-plugin": "^6.19.0",
-    "@typescript-eslint/parser": "^6.19.0",
+    "@typescript-eslint/eslint-plugin": "^8.55.0",
+    "@typescript-eslint/parser": "^8.55.0",
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.16",
-    "eslint": "^8.56.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint": "^9.39.0",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "happy-dom": "^15.11.7",
+    "happy-dom": "^20.6.3",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.9.2",
-    "vite": "^5.4.19",
-    "vitest": "^1.6.0"
+    "vite": "^6.4.1",
+    "vitest": "^4.0.18"
   }
 }
