--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --ext ts,tsx --fix",
+    "lint:security": "eslint src --ext ts,tsx --rule 'security/detect-eval-with-expression: error' --rule 'security/detect-unsafe-regex: error' --rule 'no-unsanitized/property: error' --rule 'no-unsanitized/method: error'",
     "type-check": "tsc --noEmit",
     "spec:check": "specify check",
     "spec:lint": "specify check"
@@ -51,16 +52,18 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "dompurify": "^3.3.1",
     "lucide-react": "^0.469.0",
+    "quill": "2.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-quill": "^2.0.0",
     "recharts": "^2.13.3",
     "tailwind-merge": "^2.6.0",
     "zod": "^4.3.6",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.5",
     "@types/node": "^20.11.0",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
@@ -69,8 +72,10 @@
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.16",
     "eslint": "^9.39.0",
+    "eslint-plugin-no-unsanitized": "^4.1.5",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "eslint-plugin-security": "^4.0.0",
     "happy-dom": "^20.6.3",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
