refactor: rename Timer App to Focuso and update related documentation
- Updated all instances of "Timer App" to "Focuso" in documentation and code comments.
- Changed log storage key from 'timer-app-logs' to 'focuso-logs'.
- Introduced a new logo for Focuso and updated the favicon in the HTML.
- Added a new analytics dashboard component and integrated it into the main application.
- Established a consistent typography standard for text sizes across the application.
- Refactored components to use new stat-value and stat-label classes for better styling.
- Migrated existing log data from the old storage key to the new one during logger initialization.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "timer-app",
+  "name": "focuso",
   "version": "0.1.0",
   "description": "業務効率化を目的とした多機能タイマーアプリケーション",
   "type": "module",
