Refactor timer stores and add meeting layout management
- Removed unused state and actions from basic timer store.
- Introduced a new meeting layout store to manage widget layouts and presets.
- Updated meeting report store to utilize a new ID generation utility and improved duration formatting.
- Refactored multi-timer store to use the new ID generation utility.
- Deleted deprecated agenda timer store.
- Added a new UI preferences store for managing sidebar and timer tab states.
- Updated global styles to hide overflow on html and body elements.
- Enhanced utility functions for formatting durations and timestamps.
- Created new types for widget layout management.
- Cleaned up timer types by moving pomodoro-related types to a separate file.
- Added a utility function for generating unique IDs.
- Included example tests for Playwright.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@ node_modules
 test-results/
 .playwright-mcp/
 
+# Playwright
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/playwright/.auth/
