--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "node": ">=20.19.0 <21 || >=22.11.0 <23"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@langchain/anthropic": "^1.3.18",
     "@langchain/core": "^1.1.26",
     "@langchain/openai": "^1.2.8",
@@ -63,6 +66,7 @@
     "zustand": "^4.5.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.58.2",
     "@types/dompurify": "^3.0.5",
     "@types/node": "^20.11.0",
     "@types/react": "^18.3.23",
