--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "quill": "2.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-grid-layout": "^2.2.2",
     "recharts": "^2.13.3",
     "tailwind-merge": "^2.6.0",
     "zod": "^4.3.6",
